Add photos page

--- a/src/app.html
+++ b/src/app.html
@@ -63,6 +63,7 @@
           <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
           <my-page-impressum name="/impressum"></my-page-impressum>
           <my-page-404 name="/404"></my-page-404>
+          <my-page-photos name="/photos"></my-page-photos>
           <my-page-alpine-flumserberg-20161112 name="/alpine/flumserberg/20161112"></my-page-alpine-flumserberg-20161112>
           <my-page-alpine-lenzerheide-20161029 name="/alpine/lenzerheide/20161029"></my-page-alpine-lenzerheide-20161029>
           <my-page-alpine-malbun-20161016 name="/alpine/malbun/20161016"></my-page-alpine-malbun-20161016>
