--- a/src/pages/start.html
+++ b/src/pages/start.html
@@ -22,6 +22,12 @@
     </div>
 
     <div class="card">
+      <h2>Fotolabor</h2>
+      <p>Eine Auswahl meiner besten Fotos.</p>
+      <a href="/photos">Anschauen</a><br />
+    </div>
+
+    <div class="card">
       <h2>Spielzimmer</h2>
       <p>Downloads von mir entwickelter PC-Spiele.</p>
       <template is="dom-repeat" items="[[latestGamesItems]]">
