--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -12,6 +12,7 @@
       .card {
         display: inline-block;
         text-align: left;
+        vertical-align: top;
         margin: 16px 16px 0;
         padding: 16px;
         max-width: 800px;
