--- a/src/pages/photos.html
+++ b/src/pages/photos.html
@@ -10,7 +10,7 @@
       <p>
         Meine besten Bilder veröffentliche ich bei 500px. Dort können auch Lizenzen zur eigenen Verwendung erworben werden:
         <a href="https://500px.com/dprogerwilco">https://500px.com/dprogerwilco</a><br />
-        Findest Du dort ein Fotos nicht, dann <a href="/impressum">kontaktiere mich</a>.
+        Findest Du dort ein Foto nicht, dann <a href="/impressum">kontaktiere mich</a>.
       </p>
       <p>
         Hier findest Du eine kleine Auswahl dieser Fotos:
