Fixed links in picturecard

--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -56,6 +56,14 @@
         max-width: 100%;
       }
 
+      .pictureCard a {
+        color: #CFE0C3;
+      }
+
+      .pictureCard a:visited {
+        color: #9EC1A3;
+      }
+
       .videoWrapper {
         position: relative;
         padding-bottom: 56.25%; /* 16:9 */
