--- a/src/pages/alpine/davos/20151031.html
+++ b/src/pages/alpine/davos/20151031.html
@@ -143,7 +143,7 @@ Es ging weiter auf dem Grat hinab. Im Hintergrund der Nebel im Rheintal (nur ein
 <div class="card pictureCard">
 <img src="http://i.imgur.com/yIUjxgU.jpg" /><br />
 <img src="http://i.imgur.com/QELTtQL.jpg" /><br />
-Ein kleiner See bei der Alp Alpbüel spiegelte schön die <a href="/alpine/brandnertal/20150829>Schesaplana</a>.
+Ein kleiner See bei der Alp Alpbüel spiegelte schön die <a href="/alpine/brandnertal/20150829">Schesaplana</a>.
 </div>
 <div class="card pictureCard">
 <img src="http://i.imgur.com/K3lQWMQ.jpg" /><br />
