Added a few alt text

--- a/src/pages/alpine/alpstein/20131013.html
+++ b/src/pages/alpine/alpstein/20131013.html
@@ -11,120 +11,120 @@
     </div>
 
     <div class="card pictureCard">
-<img src="http://i.imgur.com/KMICT1N.jpg" /><br />
+<img src="http://i.imgur.com/KMICT1N.jpg" alt="Herisau mit Eisenbahnbrücke" /><br />
 Auf der Hinfahrt in Herisau, einem etwas industriell angehauchtem Dorf mit dem Glatttalviadukt und im Hintergrund dem Säntis.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/HiwjHoU.jpg" /><br />
+<img src="http://i.imgur.com/HiwjHoU.jpg" alt="Schwägalp Passtraße"/><br />
 Weiter auf der ziemlich gut ausgebauten Straße hinauf zur Schwägalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/2HV8NCh.jpg" /><br />
+<img src="http://i.imgur.com/2HV8NCh.jpg" alt="Schnee auf der Schwägalp"/><br />
 Oben (1300m) angekommen lag ca. 10-15cm leicht angefrorener Schnee. Ich folgte dem schon gut ausgetrampelten Weg Richtung Chammhalde, einem großen Schuttkegel.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/I17lxvV.jpg" /><br />
+<img src="http://i.imgur.com/I17lxvV.jpg" alt="Chammhalde Säntis"/><br />
 Hier bereits an der Chammhalde, Blick zurück Richtung Säntis und Schwägalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ZVRe0sD.jpg" /><br />
-<img src="http://i.imgur.com/bIy2NU6.jpg" /><br />
+<img src="http://i.imgur.com/ZVRe0sD.jpg" alt="Wegweiser"/><br />
+<img src="http://i.imgur.com/bIy2NU6.jpg" alt="Weg zur Chammhaldenhütte"/><br />
 Anschließend weiter zur bewirtschafteten Chammhaldenhütte...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/NA3Raz3.jpg" /><br />
+<img src="http://i.imgur.com/NA3Raz3.jpg" alt="Matschiger Weg"/><br />
 ... aber dran vorbei hinein in den sumpfigen Wald zwischen Schägalp und Kronberg (dem Ziel der kleinen Wanderung).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/0kIsM2u.jpg" /><br />
+<img src="http://i.imgur.com/0kIsM2u.jpg" alt="Aufstieg mit Schnee"/><br />
 Nach dem Wald geht es recht steil hinauf an den Südhängen des Kronbergs. Der Schnee sehr nass. Auf Grund der Steigung und der intensiven Sonne nun T-Shirt-Zeit.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hEPTCEQ.jpg" /><br />
+<img src="http://i.imgur.com/hEPTCEQ.jpg" alt="Schmelzender Schnee vom Dach"/><br />
 Auch dem Schnee auf den Dächern diverser Alphütten ging es an den Kragen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/R8LBFDl.jpg" /><br />
+<img src="http://i.imgur.com/R8LBFDl.jpg" alt="Blick nach Osten"/><br />
 Ein Stück weiter oben der Blick nach Osten. Ganz hinten die vorarlberger Berge.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/mjTuIq1.jpg" /><br />
+<img src="http://i.imgur.com/mjTuIq1.jpg" alt="Trampelpfad im Schnee"/><br />
 Oben wurde es natürlich wieder etwas winterlicher.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hubgYDC.jpg" /><br />
+<img src="http://i.imgur.com/hubgYDC.jpg" alt="Blick zum Hohen Kasten"/><br />
 Und nochmal Richtung Osten. Diesmal ist der Hohe Kasten sichtbar (mitte), der noch auf meiner Liste für dieses Jahr steht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/7EAhQSd.jpg" /><br />
-<img src="http://i.imgur.com/yIhDIoT.jpg" /><br />
+<img src="http://i.imgur.com/7EAhQSd.jpg" alt="Blume im Schnee" /><br />
+<img src="http://i.imgur.com/yIhDIoT.jpg" alt="Blümchen vor Häusern"/><br />
 Widerstandsfähige Blümchen im Schnee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Od8yA8y.jpg" /><br />
+<img src="http://i.imgur.com/Od8yA8y.jpg" alt="Berge mit Wolken" /><br />
 Fast oben Blick nach Westen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/TXmV3x3.jpg" /><br />
+<img src="http://i.imgur.com/TXmV3x3.jpg" alt="Aussicht vom Kronberg" /><br />
 Und jetzt ganz oben (1700m). Endlich ist die Aussicht nach Norden ins Flachland möglich. Im vorderen Bereich ist das Appenzeller Land und ganz hinten (dank guter Sicht) ist auch der Bodensee sichtbar.<br />
 Hochauflösendes Panorama (300MPixel). Am besten mit GoogleEarth anschauen:<br />
 <a href="http://www.gigapan.com/gigapans/142406.kml" onclick="this.target='_blank';">http://www.gigapan.com/gigapans/142406.kml</a>
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/dByr8Mf.jpg" /><br />
+<img src="http://i.imgur.com/dByr8Mf.jpg" alt="Blick auf den Bodensee" /><br />
 Nochmal der Bodensee herangezoomt (immerhin 50km entfernt).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/nN3Q9GE.jpg" /><br />
+<img src="http://i.imgur.com/nN3Q9GE.jpg" alt="Kronbergbahn" /><br />
 Gelbe Kronbergseilbahngondel - an diesem Tag nicht sehr voll.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/pQQJLSz.jpg" /><br />
+<img src="http://i.imgur.com/pQQJLSz.jpg" alt="Blick vom Kronberg zum Säntis" /><br />
 Blick von der Terrasse des (teuren) Restaurants auf die zurückgelegte Strecke.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ICco5wb.jpg" /><br />
+<img src="http://i.imgur.com/ICco5wb.jpg" alt="Paraglider vor Säntis"/><br />
 Der Kronberg ist auch beliebter Startplatz für Gleitschirmflieger, die aber nur Richtung Säntis starten und dann anschließend gleich nach Norden Richtung Talstation abbiegen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/UjzwAOM.jpg" /><br />
+<img src="http://i.imgur.com/UjzwAOM.jpg" alt="Verschneite Berge"/><br />
 Panorama Richtung Westen. Keine Ahnung, was man da alles sieht... trotzdem schön. 😃
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/xPHQDiC.jpg" /><br />
+<img src="http://i.imgur.com/xPHQDiC.jpg" alt="Alpendohle"/><br />
 Wenn's irgendwo Pommes gibt, ist die Alpendohle nicht weit.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/OT5skan.jpg" /><br />
+<img src="http://i.imgur.com/OT5skan.jpg" alt="Blume vor Säntis"/><br />
 Nach der Pause auf dem gleichen Weg zurück. Wobei es durch die fortschreitende Schneeschmelze eine ziemlich schmierige und rutschige Angelegenheit war.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/b6ndVc9.jpg" /><br />
+<img src="http://i.imgur.com/b6ndVc9.jpg" alt="Wassertropfen an Tannennadel"/><br />
 Ebenfalls so im tropfenden und triefenden Wald.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vt4yPmy.jpg" /><br />
+<img src="http://i.imgur.com/vt4yPmy.jpg" alt="Säntisbahn im Winter"/><br />
 Wieder an der Schwägalp. Blick hinauf zum spektakulären Trassenverlauf der Säntisbahn.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jixDI6r.jpg" /><br />
+<img src="http://i.imgur.com/jixDI6r.jpg" alt="Altes Restaurant auf Schwägalp"/><br />
 Die Schwägalp in ihrer ganzen &quot;Schönheit&quot;. Vorne das alte Berghotel und Talstation der Seilbahn. Hinten die neue Station und dazwischen die Baustelle des neuen Hotels/Restaurants.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ojt5JyZ.jpg" /><br />
-<img src="http://i.imgur.com/F8KIkxl.jpg" /><br />
+<img src="http://i.imgur.com/ojt5JyZ.jpg" alt="Säntisbahn vor Felswand"/><br />
+<img src="http://i.imgur.com/F8KIkxl.jpg" alt="Bergstation der Säntisbahn"/><br />
 Trasse der Seilbahn.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/99saWCm.jpg" /><br />
+<img src="http://i.imgur.com/99saWCm.jpg" alt="Säntis mit Schnee hinter grüner Wiese"/><br />
 Auf der etwas individuelleren Rückfahrt nochmal der Blick zurück.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/iTLPJ7R.jpg" /><br />
+<img src="http://i.imgur.com/iTLPJ7R.jpg" alt="Hemberg am Abend"/><br />
 Vorbei am Ort Hemberg, der auf einem Bergrücken liegt.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/bA9GMKZ.jpg" /><br />
+<img src="http://i.imgur.com/bA9GMKZ.jpg" alt="Wegstrecke"/><br />
 Wegstrecke. Insgesamt 3 1/2 Stunden Gehzeit, bei besseren Wegverhältnissen sicher weniger.
 </div>
 <div class="card">
