--- a/src/pages/alpine/alpstein/20121211.html
+++ b/src/pages/alpine/alpstein/20121211.html
@@ -14,82 +14,82 @@
 Als ich pünktlich zum Betriebsstart um 13:00 ankam, war alles ausgestorben. Vom ausgewiesenem Parkplatz keine Spur - wie ich später rausfand, war er zugeschneit. Hab dann auf dem Gelände eines nahem Pflegeheims geparkt. Dort kamen mir dann auch zwei Kinder mit Skiern entgegeben, was mir die Hoffnung gab, dass der Lift wirklich startet.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/HxEU4.jpg" /><br />
+<img src="http://i.imgur.com/HxEU4.jpg" alt="Halb-Tageskarte"/><br />
 Mit einem recht langem Babylift gelangt man zur Talstation und Kasse des Lifts. Der Lift lief nun, aber ich konnte erst mal niemanden finden, die Kasse war unbesetzt. Dann kam aber doch eine Mutter mit ihrem Kind, die den Lift betreut und verkaufte mir für 20CHF die hübsch gestaltete analoge Halbtageskarte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hvVjE.jpg" /><br />
+<img src="http://i.imgur.com/hvVjE.jpg" alt="Verschneites Bergrestaurant"/><br />
 Nach 250 Höhenmetern Ankunft am Restaurant an der Bergstation auf 1100m. Tief verschneit und an diesem Dienstag nicht geöffnet.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/uiDhh.jpg" /><br />
+<img src="http://i.imgur.com/uiDhh.jpg" alt="Blick Schwägalp"/><br />
 Blick Richtung Schwägalp. Entgegen der Wettervorhersage brach die Sonne durch. 😃
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ngMyc.jpg" /><br />
+<img src="http://i.imgur.com/ngMyc.jpg" alt="Tiefschnee auf Piste"/><br />
 Die Liftspur und Piste war nicht frisch päpariert und somit mit dem Neuschnee der letzten Tage verfeinert. Hier der mittlere Abschnitt der Piste.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/sJmNb.jpg" /><br />
+<img src="http://i.imgur.com/sJmNb.jpg" alt="Schmale Piste im Wald"/><br />
 Das obere Stück führt recht schmal durch den dichten Wald (keine Abfahrten durch den Wald möglich).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/mrLxG.jpg" /><br />
+<img src="http://i.imgur.com/mrLxG.jpg" alt="Urnäsch im Winter"/><br />
 Blick von ungefähr der Mitte zum malerischen tief verschneiten Dorf Urnäsch.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/x1tOC.jpg" /><br />
+<img src="http://i.imgur.com/x1tOC.jpg" alt="Spuren im Tiefschnee"/><br />
 In der unteren Hälfte gab es einige Tiefschnee-Varianten. Die Neuschneemenge war gerade noch fahrbar oder um es anders zu veranschaulichen: Zum Pinkeln musste ich ein Loch vor mir graben und das nicht nur, weil ich so gut bestückt bin. 😉
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/2s7oW.jpg" /><br />
+<img src="http://i.imgur.com/2s7oW.jpg" alt="Talstation Skilift"/><br />
 Talstation mit eindeutiger Beschriftung.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/9TCEu.jpg" /><br />
+<img src="http://i.imgur.com/9TCEu.jpg" alt="Neuschnee bei tiefer Sonne"/><br />
 Der Schnee sieht lecker aus, oder nicht?
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/O9eSm.jpg" /><br />
+<img src="http://i.imgur.com/O9eSm.jpg" alt="Babylift" /><br />
 Blick auf die Talstation und Piste des Babylift.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/fFGtR.jpg" /><br />
+<img src="http://i.imgur.com/fFGtR.jpg" alt="Tiefschneeabfahrt" /><br />
 Schön wars. 😃
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/wFiPR.jpg" /><br />
-<img src="http://i.imgur.com/2ktQm.jpg" /><br />
+<img src="http://i.imgur.com/wFiPR.jpg" alt="Winterlandschaft" /><br />
+<img src="http://i.imgur.com/2ktQm.jpg" alt="Dunkle Wolken in verschneiter Landschaft"/><br />
 Blick talaufwärts, wie man sieht zog es später leider wieder etwas zu.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/FIQwN.jpg" /><br />
+<img src="http://i.imgur.com/FIQwN.jpg" alt="Skilift Trasse"/><br />
 Die Trasse von der Bergstation aus gesehen. Außer mir waren vielleicht noch 10 Kinder unterwegs, die aber keine Konkurrenz im Tiefschnee waren, da sie sich auf ihre Schanzen beschränkten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/LGL3c.jpg" /><br />
+<img src="http://i.imgur.com/LGL3c.jpg" alt="Skilift Ausstieg" /><br />
 Der (unbewachte) Ausstieg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/o5nJj.jpg" /><br />
+<img src="http://i.imgur.com/o5nJj.jpg" alt="Verschneiter Tisch und Stühle" /><br />
 Auf der Terasse des Restaurants. Dürfte der Neuschnee von 24h sein.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vor63.jpg" /><br />
-<img src="http://i.imgur.com/TZadj.jpg" /><br />
+<img src="http://i.imgur.com/vor63.jpg" alt="Talstation mit Schafen" /><br />
+<img src="http://i.imgur.com/TZadj.jpg" alt="Skiflift vor Schafherde"/><br />
 Die Talstation mit Schafherde.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/a3nKv.jpg" /><br />
-<img src="http://i.imgur.com/xTvRz.jpg" /><br />
+<img src="http://i.imgur.com/a3nKv.jpg" alt="Einfahrt Skilift"/><br />
+<img src="http://i.imgur.com/xTvRz.jpg" alt="Altmodische Talstation"/><br />
 Was für die Nostalgiker hier im Forum.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/G6kox.jpg" /><br />
+<img src="http://i.imgur.com/G6kox.jpg" alt="Talstation Babylift"/><br />
 Überblick vom Babylift über das Skigebiet. Ich habe dann um 16:15 Schluss gemacht. Danach noch eine schöne Heimfahrt bei Schneefall durch weihnachtlich beleuchtete Dörfer.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/MZz6c.jpg" /><br />
+<img src="http://i.imgur.com/MZz6c.jpg" alt="Gefahrene Strecke"/><br />
 GPS-Track. 19mal hoch und runter. 😃
 </div>
 <div class="card">
