More alt tags for images

--- a/src/pages/alpine/alpstein/20140801.html
+++ b/src/pages/alpine/alpstein/20140801.html
@@ -11,199 +11,199 @@
     </div>
 
     <div class="card pictureCard">
-<img src="http://i.imgur.com/TxGjZbQ.jpg" /><br />
+<img src="http://i.imgur.com/TxGjZbQ.jpg" alt="Wegweiser Schwägalp" /><br />
 Weil die Wettervorhsage (wie so oft diesen Sommer) ziemlich unsicher war und für den Nachmittag Gewitter angesagt waren, bin ich schon vor 7:00 auf der Schwägalp (1300m) losgelaufen.<br />
 Der oberste rechte Wegweiser war der relevante für mich, 3:30h bis zum Gipfel... hier auch im Hintergrund neben der Tanne zu erkennen.<br />
 Von hier unten gesehen ist unmöglich auszumachen, wie der Weg dort hinauf gehen soll.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/glpkHgv.jpg" /><br />
+<img src="http://i.imgur.com/glpkHgv.jpg" alt="Skilift Schwägalp"/><br />
 Vorbei geht der Weg am stillgelegten SL der Schwägalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1l8tVDh.jpg" /><br />
+<img src="http://i.imgur.com/1l8tVDh.jpg" alt="Weg auf Schuttkegel"/><br />
 Und anschließend in unzähligen kleinen Serpentinen auf einem Schuttkegel hinauf bis zum unteren Rand der Felswände.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/W3qvI9Y.jpg" /><br />
+<img src="http://i.imgur.com/W3qvI9Y.jpg" alt="Silhouette Säntisbahn"/><br />
 An diesem 1. August (Nationalfeiertag der Schweiz) fuhr die Seilbahn bereits ab 6:00 auf den Säntis und kostete auch nur die Hälfte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/2g7Czhf.jpg" /><br />
+<img src="http://i.imgur.com/2g7Czhf.jpg" alt="Zugewachsener Bergweg"/><br />
 Immer noch auf dem Schuttkegel...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/egHoqze.jpg" /><br />
+<img src="http://i.imgur.com/egHoqze.jpg" alt="Steiler Aufstieg durch Rinne"/><br />
 ... aber nun die Felswand erreicht. Genau durch diese Rinne führt der Weg hinauf. Wer genau hinschaut, kann einige andere Wanderer erkennen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/8coZYfB.jpg" /><br />
+<img src="http://i.imgur.com/8coZYfB.jpg" alt="Blick von Schwägalp zum Kronberg"/><br />
 Vor dem Einstieg noch mal ein Blick ins Flachland, wo bereits die Sonne aufgegangen war. Die Nordhänge des Säntis erreicht sie aber am Vormittag nicht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/lSZbBSt.jpg" /><br />
+<img src="http://i.imgur.com/lSZbBSt.jpg" alt="Wanderweg in Felswand"/><br />
 Nun mitten drin im ersten Steilstück. Der Weg ist nur zum Teil mit Drahtseil gesichert, also stolpern sollte man nicht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/pIChcMP.jpg" /><br />
+<img src="http://i.imgur.com/pIChcMP.jpg" alt="Felswand im Schatten"/><br />
 Blick nach Westen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/dER10AX.jpg" /><br />
+<img src="http://i.imgur.com/dER10AX.jpg" alt="Holzstufen im Fels"/><br />
 Und nach Osten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QFTwolM.jpg" /><br />
+<img src="http://i.imgur.com/QFTwolM.jpg" alt="Blick aus Säntis Felswand zum Kronberg"/><br />
 Nach diesem knackigen Aufstieg erreicht man eine Wiese die zwischen zwei Felswänden liegt. Diese quert man Richtung Osten. Sehr angenehm, da es mal nicht bergauf ging.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ps6jWhM.jpg" /><br />
+<img src="http://i.imgur.com/ps6jWhM.jpg" alt="Säntisbahn an Stütze"/><br />
 Dabei erreicht man fast die 1. Stütze der Säntisbahn.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/tGHC0Wo.jpg" /><br />
+<img src="http://i.imgur.com/tGHC0Wo.jpg" alt="Gondeln der Säntis Seilbahn vor Chammhalde"/><br />
 Und man ist bereits oberhalb der Kreuzung der beiden Gondeln. Im Hintergrund die Chammhalde.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/wWGxRXF.jpg" /><br />
+<img src="http://i.imgur.com/wWGxRXF.jpg" alt="Felsiger Bergweg"/><br />
 Anschließend geht es wieder sehr steil und ausgesetzt weiter, um die zweite Felswand zu erklimmen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/xwg61Un.jpg" /><br />
+<img src="http://i.imgur.com/xwg61Un.jpg" alt="Unterhalb Tierwies"/><br />
 Dann hat man auch schon fast den Grat erreicht, auf dem die kleine Berghütte Tierwies (2000m) thront.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ZpFK1GB.jpg" /><br />
+<img src="http://i.imgur.com/ZpFK1GB.jpg" alt="Panorama von Tierwies zum Toggenburg"/><br />
 Grat nach 1:30h Aufstieg erreicht, nun öffnet sich der Blick nach Süden zu den markanten Churfirsten (Skigebiet Toggenburg). Leider zog von Süden eine dichte Wolkendecke heran, die hier aber noch fotogen war.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/OjDI5Mk.jpg" /><br />
+<img src="http://i.imgur.com/OjDI5Mk.jpg" alt="Gasthaus Tierwies auf Grat"/><br />
 Tierwies von oben, die übrigens von einer Transportseilbahn von der Schwägalp aus versorgt wird.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/JmOIgbv.jpg" /><br />
+<img src="http://i.imgur.com/JmOIgbv.jpg" alt="Blick von Tierwies zum Säntis"/><br />
 Und nun ist der Säntis schon trügerisch nah, es sind aber noch knapp 1:30h.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1uDYEKs.jpg" /><br />
+<img src="http://i.imgur.com/1uDYEKs.jpg" alt="Weg durch Kalksteinschichtungen"/><br />
 Sehr interessant führt der Weg nun flacher mitten durch eine Rinne der aufgefalteten Kalksteinschichtungen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/XGApaOs.jpg" /><br />
+<img src="http://i.imgur.com/XGApaOs.jpg" alt="Wanderer auf der Himmelsleiter"/><br />
 In der Ferne ist bereits eine Gruppe Frühaufsteher auf der Himmelsleiter kurz vor dem Gipfel des Säntis angelangt. Dazu später mehr.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/a7PJAA9.jpg" /><br />
+<img src="http://i.imgur.com/a7PJAA9.jpg" alt="Unterhalb des Säntis Gipfels"/><br />
 Querung der Seilbahntrasse. Hier ebenfalls sehr schöne Schichtungen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/tY1GZQK.jpg" /><br />
+<img src="http://i.imgur.com/tY1GZQK.jpg" alt="Zwischenausstieg Säntisbahn"/><br />
 Die Seilbahn hat hier (an Stütze 2) eine Zwischenstation, bei der man Ein- und Austeigen kann, um das letzten Anstieg zum umgehen. Besonders im Winter ist dieser Ausstieg wichtig, da man von dort relativ einfach nach Wildhaus abfahren kann.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/RAzzvHp.jpg" /><br />
+<img src="http://i.imgur.com/RAzzvHp.jpg" alt="Felsiger Weg zum Grat"/><br />
 Dann geht es wieder steil bergauf - auf den Grat Richtung Osten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/om9ioGJ.jpg" /><br />
+<img src="http://i.imgur.com/om9ioGJ.jpg" alt="Grat vor dem Säntis"/><br />
 Auf dem Grat angekommen. Leider nun doch schon ziemlich bewölkt. Nach Osten geht es steil bergab Richtung Messmer und Seealpsee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/f3QJTFs.jpg" /><br />
+<img src="http://i.imgur.com/f3QJTFs.jpg" alt="Himmelsleiter"/><br />
 Die Himmelsleiter. Eine steile Felsplatte, in der Metallstufen eingeschlagen wurden. Wirklich schwierig ist es nicht, da die Treppe beidseitig mit Drahtseil gesichert ist... aber ins Pusten kommt man ganz schön.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/FEKiah0.jpg" /><br />
+<img src="http://i.imgur.com/FEKiah0.jpg" alt="Tunnel unter Säntis"/><br />
 Oben angekommen macht man zuerst Bekannschaft mit der Unterwelt unter der Säntis-Bergstation. Von dort führt dann eine Wendeltreppe hinauf in die Zivilisation.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/tgZEy0K.jpg" /><br />
+<img src="http://i.imgur.com/tgZEy0K.jpg" alt="Säntisgipfel"/><br />
 Noch hatte ich den Gipfel aber nicht erreicht. Gegen den inneren Schweinehund kämpfend habe ich natürlich auf den Fahrstuhl verzichtet und bin die Treppen hoch. Damit insgesamt 3:00h und 1200m aufgestiegen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/06WQobC.jpg" /><br />
+<img src="http://i.imgur.com/06WQobC.jpg" alt="Restaurant Alter Säntis von oben"/><br />
 Blick vom Gipfel nach Osten auf das Restaurant &quot;Alter Säntis&quot;. Im Hintergrund der Seealpsee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jKLWLdR.jpg" /><br />
+<img src="http://i.imgur.com/jKLWLdR.jpg" alt="Vom Säntis zum Lisengrat und Altmann"/><br />
 Und nach Süden zum Lisengrat und Altmann.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/U6q0pjx.jpg" /><br />
+<img src="http://i.imgur.com/U6q0pjx.jpg" alt="Himmelsleiter von oben"/><br />
 Und nach Norden auf das Ende der Himmelsleiter und im Hintergrund die Schwägalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hZwrOf6.jpg" /><br />
+<img src="http://i.imgur.com/hZwrOf6.jpg" alt="Antenne auf Säntis"/><br />
 Der (etwas arg verbaute) Gipfel samt markantem Sendeturm.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/OA9zoeC.jpg" /><br />
-Auf der Terasse des &quot;Alter Säntis&quot;. Wirklich gemütlich war es auf Grund der fehlenden Sonne nicht...
+<img src="http://i.imgur.com/OA9zoeC.jpg" alt="Terrasse Alter Säntis"/><br />
+Auf der Terrasse des &quot;Alter Säntis&quot;. Wirklich gemütlich war es auf Grund der fehlenden Sonne nicht...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/fpQw5am.jpg" /><br />
+<img src="http://i.imgur.com/fpQw5am.jpg" alt="Abstieg Himmelsleiter"/><br />
 ... also machte ich mich nach 30min wieder an den Abstieg. Unkreativ wieder auf dem gleichen Weg. Die anderen Abstiege nach Wildhaus oder Wasserauen würden noch längere Fahrten mit Bus und Bahn bedeuten.<br />
 Blick von oben auf die Himmelsleiter. Da sie auch ein paar Ausweichstellen besitzt, kam ich einigermaßen an den Aufsteigenden vorbei.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/XhoyFCx.jpg" /><br />
+<img src="http://i.imgur.com/XhoyFCx.jpg" alt="360° Panorama Himmelsleiter"/><br />
 360° Panorama auf dem Grat. Hab die Photo Sphere Funktion von Android benutzt. Damit geht es flott, aber die Qualität ist nicht gerade berauschend. Anschauen kann man es mit <a href="http://gigapan.com/gigapans/159933.kml" onclick="this.target='_blank';">Google-Earth</a> oder <a href="https://www.google.com/maps/views/view/114185927693922971427/gphoto/6042943518610908610" onclick="this.target='_blank';">hier</a>
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/sgEV2Ol.jpg" /><br />
+<img src="http://i.imgur.com/sgEV2Ol.jpg" alt="Blumen in Felsspalte"/><br />
 Blümchen in einer Felsspalte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hTgwN7k.jpg" /><br />
+<img src="http://i.imgur.com/hTgwN7k.jpg" alt="Bergwegzeichen in Fels"/><br />
 Blick zurück auf den eindeutig zu knapp gekennzeichneten Weg. 😉
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/tTIrnNx.jpg" /><br />
+<img src="http://i.imgur.com/tTIrnNx.jpg" alt="Versteinerungen in Felswand"/><br />
 Der Fels kann seine Herkunft vom Grund des Meeres nicht verbergen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/MF6BFAH.jpg" /><br />
+<img src="http://i.imgur.com/MF6BFAH.jpg" alt="Blick von oben auf Schwägalp"/><br />
 Nun wieder bei Tierwies. Tiefblick auf die nun gut besuchte Schwägalp mit der riesigen Baustelle des neuen Hotels und Restaurants.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/eLcGSkC.jpg" /><br />
+<img src="http://i.imgur.com/eLcGSkC.jpg" alt="Nebelschaden oberhalb der Schwägalp"/><br />
 Nun zogen auch noch ein paar Nebelschwaden den Hang hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/bwinr5H.jpg" /><br />
+<img src="http://i.imgur.com/bwinr5H.jpg" alt="Säntisbahn durch Wolken in Felswand"/><br />
 Und so wirkte das vom Aufstieg bereits bekannte Motiv gleich noch mal anders.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/5HGFHp8.jpg" /><br />
+<img src="http://i.imgur.com/5HGFHp8.jpg" alt="Blumen über der Schwägalp"/><br />
 Blumenwiese... wirkt recht harmlos, wenn man nicht weiß, dass unter- und oberhalb jeweils eine Felswand ist.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/fLlG46J.jpg" /><br />
+<img src="http://i.imgur.com/fLlG46J.jpg" alt="Steiler Abstieg mit Ketten gesichert"/><br />
 Weg durch die letzte Wand. Sehr steil und abwärts muss man sich ordentlich konzentrieren.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/TmPvVld.jpg" /><br />
+<img src="http://i.imgur.com/TmPvVld.jpg" alt="Blick von Schwägalp Richtung Toggenburg"/><br />
 Puh, geschafft. Inzwischen hatte sich auch die Wolkendecke verzogen und fotogeneren Quellwolken platz gemacht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/75V1SUV.jpg" /><br />
+<img src="http://i.imgur.com/75V1SUV.jpg" alt="Miniaturaufnahme Kuhweide"/><br />
 Miniturbild einer (hoffentlich ungefährlichen) Kuhweide.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/o8vZvsA.jpg" /><br />
+<img src="http://i.imgur.com/o8vZvsA.jpg" alt="Abgestorbener Baum auf Schwägalp"/><br />
 Und noch ein Sonnenbild der nun harmlosen Landschaft.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/irUfrNE.jpg" /><br />
+<img src="http://i.imgur.com/irUfrNE.jpg" alt="Altes Berghoten Schwägalp"/><br />
 Ankunft um 14:30 an der Schwägalp. Leider hat mir wieder mein Knie Probleme gemacht, so dass der Abstieg etwas länger dauerte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/u5gPTgA.jpg" /><br />
+<img src="http://i.imgur.com/u5gPTgA.jpg" alt="Säntis in Wolken"/><br />
 Letzter Blick zurück auf den nun wolkenverhangenen Säntis.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/9tXYkLU.jpg" /><br />
-<img src="http://i.imgur.com/13kIC3o.jpg" /><br />
+<img src="http://i.imgur.com/9tXYkLU.jpg" alt="Wegstrecke Schwägalp Säntis"/><br />
+<img src="http://i.imgur.com/13kIC3o.jpg" alt="Höhenprofil Aufstieg Säntis"/><br />
 Gelaufene Strecke. Dem Track sieht man an, dass GPS manchmal ziemlich ungenau ist... Auf- und Abstieg waren eigentlich fast identisch. Der Höhenverlauf verrät, dass ich mir beim Abstieg ziemlich viel Zeit gelassen habe.
 </div>
 <div class="card">
