--- a/src/pages/start.html
+++ b/src/pages/start.html
@@ -8,7 +8,7 @@
     <div class="card">
       <h1>Herzlich willkommen</h1>
       <p>Hier finden Du ein wildes Sammelsurium von allem, was ich für veröffentlichbar halte.</p>
-    </div>
+    </div><br />
 
     <div class="card">
       <h2>Alpinfunk</h2>
