--- a/src/pages/alpine/alpstein/20131019.html
+++ b/src/pages/alpine/alpstein/20131019.html
@@ -14,227 +14,227 @@
 Um 7:45 Ankuft auf dem Parkplatz der PB Alp Sigel kurz hinter Brülisau. Anschließend steiler Aufstieg auf einem schmalen Pfad nach Steig (von 900m auf 1300m).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Y1vqwEC.jpg" /><br />
+<img src="http://i.imgur.com/Y1vqwEC.jpg" alt="Dunkler Wald" /><br />
 Nach dem dunklen Wald wurde es auf nun etwas heller und auf dem benachbarten Hügeln ging die Sonne auf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jOkU719.jpg" /><br />
+<img src="http://i.imgur.com/jOkU719.jpg" alt="Bergstation Alp Sigel"/><br />
 Ebenfalls gegenüber an der spektakulären Bergstation der PB Alp Sigel.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/MPSjXkX.jpg" /><br />
+<img src="http://i.imgur.com/MPSjXkX.jpg" alt="Weg zum Sämtisersee" /><br />
 Von gleicher Stelle Blick zum Verlauf des weiteren Weges. Erstes Etappenziel war das Ende dieses Tals.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Pe2487P.jpg" /><br />
+<img src="http://i.imgur.com/Pe2487P.jpg" alt="Sämtisersee mit Spiegelung" /><br />
 Nach einem kleinen Abstieg ging es am Sämtisersee vorbei...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QAMPWDP.jpg" /><br />
+<img src="http://i.imgur.com/QAMPWDP.jpg" alt="Nahaufnahme Viehgitter" /><br />
 ... und anschließend auf einem Feldweg weiter. &quot;Piste frisch präpariert, aber ruppig&quot;.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/BvcKu1M.jpg" /><br />
-<img src="http://i.imgur.com/8pDGTcs.jpg" /><br />
+<img src="http://i.imgur.com/BvcKu1M.jpg" alt="Tal mit Alp Richtung Altmann"/><br />
+<img src="http://i.imgur.com/8pDGTcs.jpg" alt="Tal mit Hohem Kasten"/><br />
 Und weiter durch das malerische, aber noch schattige Tal, im Rücken der Hohe Kasten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/WRfPsQ8.jpg" /><br />
+<img src="http://i.imgur.com/WRfPsQ8.jpg" alt="Holzstufen im felsigen Wald" /><br />
 Am Ende des Tals ging es links 200 Höhenmeter steil unterhalb einer Felswand hinauf...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/fHLsxkB.jpg" /><br />
-<img src="http://i.imgur.com/KBcVN3v.jpg" /><br />
+<img src="http://i.imgur.com/fHLsxkB.jpg" alt="Fälensee mit Spiegelung" /><br />
+<img src="http://i.imgur.com/KBcVN3v.jpg" alt="Fälensee mit Reflexion"/><br />
 ....zum Fälensee. 
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/szrvLHo.jpg" /><br />
+<img src="http://i.imgur.com/szrvLHo.jpg" alt="Tafel des geologischen Wanderwegs"/><br />
 Hier beginnt der Geologische Wanderweg, der mich bis zum Hohen Kasten mit Schautafeln begleitete. Hier wird die interessante Geologie erläutert, die hauptverantwortlich für die schönen Panoramen ist.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1DFnr6U.jpg" /><br />
+<img src="http://i.imgur.com/1DFnr6U.jpg" alt="Berggasthaus Bollenwees am Fälensee"/><br />
 Am Fälensee liegt das Berggasthaus Bollenwees, aus dem noch ein paar müde Bergsteiger erschienen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/w01QJqT.jpg" /><br />
+<img src="http://i.imgur.com/w01QJqT.jpg" alt="Saxerlücke mit Blick ins Rheintal"/><br />
 Danach ging es weitere 200m hinauf zur Saxerlücke. Endlich in der Sonne und den Tiefblick ins Rheintal genießen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/NUVwsEL.jpg" /><br />
+<img src="http://i.imgur.com/NUVwsEL.jpg" alt="Kreuzberge"/><br />
 Neben der Saxerlücke ragen die steilen Kreuzberge in die Höhe, ein sehr beliebtes Kletterrevier.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/HC8Vjch.jpg" /><br />
+<img src="http://i.imgur.com/HC8Vjch.jpg" alt="Blick hinab auf Bollenwees"/><br />
 Blick zurück zum Gasthaus Bollenwees.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/WLeDno9.jpg" /><br />
+<img src="http://i.imgur.com/WLeDno9.jpg" alt="Steiler Weg vor Saxerlücker"/><br />
 Anschließend ging es gleich noch mal 200m steil auf dem Grat hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/xyoGZSC.jpg" /><br />
+<img src="http://i.imgur.com/xyoGZSC.jpg" alt="Kreuzberge hinter Saxerlücke"/><br />
 Während des Aufstiegs nochmal der Blick zurück zu den Kreuzbergen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Xdo2c8u.jpg" /><br />
+<img src="http://i.imgur.com/Xdo2c8u.jpg" alt="Hangweg"/><br />
 So sah der Weg meist aus.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/pfZ7sJS.jpg" /><br />
-<img src="http://i.imgur.com/185zvch.jpg" /><br />
+<img src="http://i.imgur.com/pfZ7sJS.jpg" alt="Panorama Kreuzberge"/><br />
+<img src="http://i.imgur.com/185zvch.jpg" alt="Kreuzberge aus Entfernung"/><br />
 Beim nächsten Zwischengipfel musste die fantastische Aussicht festgehalten werden.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/pIev6Wh.jpg" /><br />
+<img src="http://i.imgur.com/pIev6Wh.jpg" alt="Gratweg"/><br />
 Und so ging es weiter.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ixmFNL1.jpg" /><br />
+<img src="http://i.imgur.com/ixmFNL1.jpg" alt="Blick durch den Alpstein auf den Säntis"/><br />
 Dann tauchte im Rücken der Gipfel des Säntis (2500m) auf, umsäumt von ähnlich steilen Felsen wie die Kreuberge.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ivN7v1H.jpg" /><br />
+<img src="http://i.imgur.com/ivN7v1H.jpg" alt="Tiefblick in das Rheintal"/><br />
 Da weiß man gar nicht, wo man hinschauen soll, hier nochmal ins Rheintal.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/o1wiiK2.jpg" /><br />
+<img src="http://i.imgur.com/o1wiiK2.jpg" alt="Herbstwald von oben"/><br />
 Und ja, es ist Herbst. 😃
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Kbdq6th.jpg" /><br />
+<img src="http://i.imgur.com/Kbdq6th.jpg" alt="Fälensee mit Säntis"/><br />
 Und wieder der Säntis und der Fälensee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/3oGYyU7.jpg" /><br />
+<img src="http://i.imgur.com/3oGYyU7.jpg" alt="Ebenalp vor Nebelmeer"/><br />
 Zu Abwechslung mal der Blick ins Flachland, in dem noch der Nebel waberte. Im Mittelgrund das Skigebiet Ebenalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/PCj5r92.jpg" /><br />
-<img src="http://i.imgur.com/1SrTnuz.jpg" /><br />
-<img src="http://i.imgur.com/hHAd3tZ.jpg" /><br />
-<img src="http://i.imgur.com/kvVq404.jpg" /><br />
-<img src="http://i.imgur.com/sCrDaWW.jpg" /><br />
+<img src="http://i.imgur.com/PCj5r92.jpg" alt="Tanne neben Felsenweg"/><br />
+<img src="http://i.imgur.com/1SrTnuz.jpg" alt="In Fels geschlagener Weg"/><br />
+<img src="http://i.imgur.com/hHAd3tZ.jpg" alt="Weg neben Fels mit Geländer"/><br />
+<img src="http://i.imgur.com/kvVq404.jpg" alt="Säntis mit dunklem Vordergrund"/><br />
+<img src="http://i.imgur.com/sCrDaWW.jpg" alt="Felsiger Weg vor Säntis"/><br />
 Ab dann führte der gut ausgebaute Weg durch felsiges Gelände - schwindelfrei und trittsicher sollte man schon sein.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/RqUkNbZ.jpg" /><br />
-<img src="http://i.imgur.com/XBQeXRv.jpg" /><br />
+<img src="http://i.imgur.com/RqUkNbZ.jpg" alt="Panorama Gasthaus Staubern"/><br />
+<img src="http://i.imgur.com/XBQeXRv.jpg" alt="Staubern"/><br />
 Ankunft am Gasthaus Staubern, kleine Rast nebenan im Gras.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/9XPq5eC.jpg" /><br />
+<img src="http://i.imgur.com/9XPq5eC.jpg" alt="Seilbahn Staubern mit Rheintal"/><br />
 Zur Hütte fährt eine kleine PB vom Rheintal hinauf (1300m Höhenunterschied).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Ccc8zLo.jpg" /><br />
-<img src="http://i.imgur.com/ioENClh.jpg" /><br />
+<img src="http://i.imgur.com/Ccc8zLo.jpg" alt="Restaurant Staubern"/><br />
+<img src="http://i.imgur.com/ioENClh.jpg" alt="Wanderweg nach Staubern"/><br />
 Noch zwei Ansichten des Gasthaus Staubern.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/MH9Sxnn.jpg" /><br />
+<img src="http://i.imgur.com/MH9Sxnn.jpg" alt="Gratweg zum Hohen Kasten"/><br />
 Der weitere Verlauf des Wegs zum Hohen Kasten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/VcfjZA9.jpg" /><br />
+<img src="http://i.imgur.com/VcfjZA9.jpg" alt="Tal mit verschneitem Säntis"/><br />
 Das am Morgen durchwanderte Tal lag nun in der Sonne.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/kSn7rgs.jpg" /><br />
+<img src="http://i.imgur.com/kSn7rgs.jpg" alt="Blick auf Brülisau"/><br />
 Blick hinab auf Brülisau.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vBNmSsw.jpg" /><br />
+<img src="http://i.imgur.com/vBNmSsw.jpg" alt="Sämtisersee mit Säntis"/><br />
 Der Sämtisersee, diesmal von oben.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jCThTkp.jpg" /><br />
-<img src="http://i.imgur.com/2IGrXxb.jpg" /><br />
+<img src="http://i.imgur.com/jCThTkp.jpg" alt="Bergstation Hoher Kasten"/><br />
+<img src="http://i.imgur.com/2IGrXxb.jpg" alt="Panorama mit Hoher Kasten und Rheintal"/><br />
 Der Gipfel des Hohen Kasten kam langsam näher.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/31CDFoJ.jpg" /><br />
+<img src="http://i.imgur.com/31CDFoJ.jpg" alt="Sämtisersee im Alpstein"/><br />
 Und noch mal der Standardblick auf Sämtisersee und Säntismassiv. Und ja, ich hab schon einige Fotos aussortiert. 😉
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ZuUpJCV.jpg" /><br />
+<img src="http://i.imgur.com/ZuUpJCV.jpg" alt="Miniaturaufnahme Alphütte"/><br />
 Miniaturfoto muss auch mal sein.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Hjw0pmG.jpg" /><br />
+<img src="http://i.imgur.com/Hjw0pmG.jpg" alt="Weg zum Hohen Kasten"/><br />
 Da konnte man denken, man wäre fast da.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/49LMl1e.jpg" /><br />
+<img src="http://i.imgur.com/49LMl1e.jpg" alt="Blick auf Bergstation Alp Sigel"/><br />
 Links nochmal die Bergstation der PB Alp Sigel.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/g3WWIII.jpg" /><br />
+<img src="http://i.imgur.com/g3WWIII.jpg" alt="Alpstein"/><br />
 Das alles sieht zwar hochalpin aus, aber man befindet sich nur zwischen 1500m und 1800m, was man an den Laubbäumen erkennen kann.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/IP86pxq.jpg" /><br />
+<img src="http://i.imgur.com/IP86pxq.jpg" alt="Sämtisersee mit Altmann"/><br />
 Laaangweilig. 😉
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/2dDkaDH.jpg" /><br />
+<img src="http://i.imgur.com/2dDkaDH.jpg" alt="Hoher Kasten Seilbahn"/><br />
 Kurz vor dem Hohen Kasten kam noch ein (gefühlt) recht heftiger Aufstieg von 300 Höhenmetern.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/KZikJxe.jpg" /><br />
+<img src="http://i.imgur.com/KZikJxe.jpg" alt="Rheintalpanorama vom Hohen Kasten" /><br />
 Geschafft. 😃
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/8dNQNNx.jpg" /><br />
+<img src="http://i.imgur.com/8dNQNNx.jpg" alt="Historisches Skifahren Hoher Kasten"/><br />
 LSAP Hoher Kasten. Wobei ein richtiges Skigebiet war es nie.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/DS6WUSu.jpg" /><br />
+<img src="http://i.imgur.com/DS6WUSu.jpg" alt="Alpendohle vor Rheintal" /><br />
 Alpendohle vor Rhein.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/pDvdVrd.jpg" /><br />
+<img src="http://i.imgur.com/pDvdVrd.jpg" alt="Appenzeller Land" /><br />
 Blick ins Flachland. Der Nebel hatte sich inzwischen aufgelöst.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/76x6RqW.jpg" /><br />
+<img src="http://i.imgur.com/76x6RqW.jpg" alt="Drehrestaurant Hoher Kasten." /><br />
 Neben dem recht neuen Drehrestaurant auf dem Gipfel. Ich habe aber auf der Terrasse des Selbstbedienungsrestaurants gespeist. Inzwischen war es sehr windig, so dass ich erstmals an diesem Tag die Jacke über das T-Shirt streifen musste.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Mf0KiOz.jpg" /><br />
+<img src="http://i.imgur.com/Mf0KiOz.jpg" alt="Panorama vom Hohen Kasten zum Bodensee"/><br />
 Geht etwas im blau unter, aber man konnte den gesamten Bodensee überblicken. Rechts Bregenz, links Konstanz.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1Rut14Y.jpg" /><br />
+<img src="http://i.imgur.com/1Rut14Y.jpg" alt="Panorama vom Kamor zum Alpstein"/><br />
 Ausgeruht ging es weiter auf den Kamor, einem vom Militär unterhöhltem Berg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1B48mjs.jpg" /><br />
+<img src="http://i.imgur.com/1B48mjs.jpg" alt="Gipfel des Hohen Kasten mit Antenne"/><br />
 Der Hohe Kasten vom Kamor aus gesehen. &quot;Wer hat den längsten?&quot;
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/MFJ9mO5.jpg" /><br />
+<img src="http://i.imgur.com/MFJ9mO5.jpg" alt="Radfahrer auf Kamor vor Rheintal"/><br />
 Auf den Kamor führt ein asphaltierter Fahrweg - viel genutzt von Radfahrern.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/cq87v2j.jpg" /><br />
-<img src="http://i.imgur.com/hV0Z6OX.jpg" /><br />
+<img src="http://i.imgur.com/cq87v2j.jpg" alt="Blick vom Ruhesitz zum Hohen Kasten" /><br />
+<img src="http://i.imgur.com/hV0Z6OX.jpg" alt="Berggasthaus Ruhesitz"/><br />
 Nach der Hälfte des Abstieg Trinkpause am Berggasthaus Ruhesitz. Nun extrem stürmisch, so dass das Besteck von den Tischen wehte - Haus der fliegenden Messer.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/LVfvq6k.jpg" /><br />
+<img src="http://i.imgur.com/LVfvq6k.jpg" alt="Miniaturaufnahme Brülisau"/><br />
 Danach der letzte Abstieg über Wiesen. Miniaturaufnahme der Talstation der Hohen Kasten Bahn in Brülisau.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QVcMCCa.jpg" /><br />
+<img src="http://i.imgur.com/QVcMCCa.jpg" alt="Spazierweg Brülisau an Waldrand" /><br />
 Hier wieder windstill und sehr warm.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/iHdzQkR.jpg" /><br />
+<img src="http://i.imgur.com/iHdzQkR.jpg" alt="Blick von Brülisau zum Hohen Kasten"/><br />
 Und die letzten Meter auf der Straße zum Parkplatz... langsam reichte es.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/LKn7ets.jpg" /><br />
-<img src="http://i.imgur.com/iaBAWhk.jpg" /><br />
+<img src="http://i.imgur.com/LKn7ets.jpg" alt="Wegstrecke Geologischer Wanderweg" /><br />
+<img src="http://i.imgur.com/iaBAWhk.jpg" alt="Höhenprofil Geologiscer Wanderweg"/><br />
 Zurückgelegte Strecke. 26km und 2100m hoch (und auch wieder runter) in 9h Gehzeit + 1h Pause.
 </div>
 <div class="card">
